<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright © 2013 the original author or authors (webmias@fi.muni.cz)

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <packaging>pom</packaging>
  <modules>
    <module>mathmlcan-eval-webapp</module>
    <module>mathmlcan-eval-client</module>
  </modules>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.1.3.RELEASE</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>
  <groupId>cz.muni.fi.mir</groupId>
  <artifactId>mathmlcan-eval-parent</artifactId>
  <version>2.0.0-SNAPSHOT</version>
  <name>mathmlcan-eval-parent</name>
  <inceptionYear>2013</inceptionYear>

  <url>https://mir.fi.muni.cz/mathml-normalization/</url>

  <developers>
    <developer>
      <id>dominik.szalai</id>
      <email>emptulik@gmail.com</email>
      <name>Dominik Szalai</name>
    </developer>
    <developer>
      <id>siska</id>
      <email>xsiska2@mail.muni.cz</email>
      <name>Robert Šiška</name>
    </developer>
  </developers>

  <description>
    The development of the MathML Canonicalizer requires proper testing. To meet these needs, we
    have developed MathMLCanEval – a web application with the aim to create a large test database of
    mathematical formulae covering the entire MathML 3.0 Presentation markup. We use the database to
    evaluate the correctness and effectiveness of the MathML Canonicalizer.
  </description>

  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/MIR-MU/MathMLCanEval/issues</url>
  </issueManagement>

  <organization>
    <name>Maths Information Retrieval research group at Masaryk University</name>
    <url>https://mir.fi.muni.cz/</url>
  </organization>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <properties>
    <java.version>11</java.version>
    <org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
    <org.lombok.version>1.18.4</org.lombok.version>
    <javax.jaxb.version>2.3.0</javax.jaxb.version>
    <jackson.version>2.9.8</jackson.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>cz.muni.fi.mir</groupId>
        <artifactId>mathmlcan-eval-webapp</artifactId>
        <version>2.0.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>cz.muni.fi.mir</groupId>
        <artifactId>mathmlcan-eval-client</artifactId>
        <version>2.0.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>org.zalando</groupId>
        <artifactId>problem-spring-web</artifactId>
        <version>0.23.0</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.security.oauth</groupId>
        <artifactId>spring-security-oauth2</artifactId>
        <version>2.3.4.RELEASE</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.security</groupId>
        <artifactId>spring-security-jwt</artifactId>
        <version>1.0.9.RELEASE</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.module</groupId>
        <artifactId>jackson-module-afterburner</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mapstruct</groupId>
        <artifactId>mapstruct</artifactId>
        <version>${org.mapstruct.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.8.1</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.6</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.mylyn.github</groupId>
        <artifactId>org.eclipse.egit.github.core</artifactId>
        <version>2.1.5</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jgit</groupId>
        <artifactId>org.eclipse.jgit</artifactId>
        <version>5.2.1.201812262042-r</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-invoker-plugin</artifactId>
        <version>3.2.0</version>
      </dependency>
      <dependency>
        <groupId>com.github.romankh3</groupId>
        <artifactId>image-comparison</artifactId>
        <version>708fb5f630</version>
      </dependency>
      <dependency>
        <groupId>de.rototor.jeuclid</groupId>
        <artifactId>jeuclid-core</artifactId>
        <version>3.1.13</version>
      </dependency>

      <!-- jdk11 deps -->
      <dependency>
        <groupId>javax.xml.bind</groupId>
        <artifactId>jaxb-api</artifactId>
        <version>${javax.jaxb.version}</version>
      </dependency>
      <dependency>
        <groupId>com.sun.xml.bind</groupId>
        <artifactId>jaxb-core</artifactId>
        <version>${javax.jaxb.version}</version>
      </dependency>
      <dependency>
        <groupId>com.sun.xml.bind</groupId>
        <artifactId>jaxb-impl</artifactId>
        <version>${javax.jaxb.version}</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jaxb</groupId>
        <artifactId>jaxb-runtime</artifactId>
        <version>${javax.jaxb.version}</version>
      </dependency>


      <!-- test deps -->
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>5.3.2</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.security</groupId>
        <artifactId>spring-security-test</artifactId>
        <version>5.1.3.RELEASE</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <!--  <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter</artifactId>
      </dependency>

      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-test</artifactId>
        <scope>test</scope>
      </dependency>
    </dependencies>-->

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
          <configuration>
            <release>${java.version}</release>
            <annotationProcessorPaths>
              <path>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${org.mapstruct.version}</version>
              </path>
              <path>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${org.lombok.version}</version>
              </path>
              <path>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-jpamodelgen</artifactId>
                <version>5.4.1.Final</version>
              </path>
            </annotationProcessorPaths>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>0.8.3</version>
          <executions>
            <execution>
              <goals>
                <goal>prepare-agent</goal>
              </goals>
            </execution>
            <execution>
              <id>report</id>
              <phase>prepare-package</phase>
              <goals>
                <goal>report</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>com.mycila</groupId>
          <artifactId>license-maven-plugin</artifactId>
          <version>3.0</version>
          <configuration>
            <header>com/mycila/maven/plugin/license/templates/APACHE-2.txt</header>
            <properties>
              <owner>the original author or authors</owner>
              <email>webmias@fi.muni.cz</email>
            </properties>
            <excludes>
              <exclude>**/README</exclude>
              <exclude>src/test/resources/**</exclude>
              <exclude>src/main/resources/**</exclude>
            </excludes>
            <mapping>
              <java>SLASHSTAR_STYLE</java>
              <proto>SLASHSTAR_STYLE</proto>
            </mapping>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>check</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>
</project>
